Delete unnecessary cell and writing down a few things

--- a/connect adb.ipynb
+++ b/connect adb.ipynb
@@ -436,30 +436,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "/sdcard/musica/AC\\ DC/74\\ Jailbreak\\ \\(1984\\)/\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'01 - Jailbreak.mp3\\r\\n02 - You Aint Got A Hold On Me.mp3\\r\\n03 - Show Business.mp3\\r\\n04 - Soul Stripper.mp3\\r\\n05 - Baby Please Dont Go.mp3\\r\\n'"
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "ruta = list(tree_modify.keys())[0]\n",
-    "print(ruta)\n",
-    "run_adb(f'ls {ruta}')"
+    "## Changing the names of the tree by those of the tree_modify (Making the changes on the device)"
    ]
   },
   {
